# Fmail

./: .gitignore  Cargo.toml  LICENSE  README.md  default.env  schema.sql
receive/: Cargo.toml
receive/src/: main.rs
send/: Cargo.toml
send/src/: main.rs
smtp/: Cargo.toml
smtp/src/: lib.rs  main.rs
